--- a/assets/styles/nelliel_b/nelliel_b.css
+++ b/assets/styles/nelliel_b/nelliel_b.css
@@ -31,6 +31,10 @@ a:hover {
     color: #AA2255;
 }
 
+form {
+	border-spacing: 2px;
+}
+
 /* General formatting */
 .content-page {
     height: 100%;
